Restructure content layout

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@ title: Sam Selikoff
 </style>
 
 <header class='header_large shadow hidden-lg'>
-  {% include header-home.html %}
+  {% include header.html %}
 </header>
 
-<div class="home-wrapper">
-  <div class="left-side visible-lg">
-    <aside class='visible-lg' role='complementary'>
-      {% include header-home.html %}
+<div class="content content-home">
+  <div class="content-secondary-wrapper visible-lg">
+    <aside class='content-secondary' role='complementary'>
+      {% include header.html %}
     </aside>
   </div>
 
-  <div class="right-side">
-    <section role="main">
+  <div class="content-main-wrapper">
+    <section class='content-main' role="main">
       <div class='inverted'>
         <div class='home-section container'>
     
