Working on larger screen nav

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ title: Sam Selikoff
 </style>
 
 <header class='header_large shadow hidden-lg'>
-  {% include header.html %}
+  {% include logo.html %}
 </header>
 
 <div class="content content-home">
   <div class="content-secondary-wrapper visible-lg">
     <aside class='content-secondary' role='complementary'>
-      {% include header.html %}
+      {% include logo.html %}
     </aside>
   </div>
 
