Tidy up page headers

--- a/talks/index.html
+++ b/talks/index.html
@@ -5,10 +5,10 @@ title: Sam Selikoff - Talks
 
 <div id="talks">
 
-  <div class="title">
+  <div class="title u-margin-bottom">
     <h1>Talks</h1>
-    <p>I love speaking and teaching (for free) on all things front-end web development.</p>
-    <p><a class='link-inverted' href="mailto:sam.selikoff@gmail.com">Reach out to me</a> if you'd like me to speak at your event.</p>
+    <p class='text-lead u-margin-bottom-small'>I love speaking and teaching on all things front-end web development</p>
+    <p class='text-lead'><a class='link-inverted' href="mailto:sam.selikoff@gmail.com">Reach out</a> if you'd like me to speak at your event</p>
   </div>
 
   {% assign sorted_talks = (site.talks | sort: 'date') %}
