--- a/writings/index.html
+++ b/writings/index.html
@@ -7,10 +7,10 @@ title: Sam Selikoff - Writings
 
   <div class="title">
     <h1>Writings</h1>
-    <p>Tutorials and articles on JavaScript, economics and more</p>
+    <p class='text-lead'>Tutorials and articles on JavaScript, economics and more</p>
   </div>
 
-  <h2>Tutorials</h2>
+  <h2 class='listing-heading'>Tutorials</h2>
   <ul class='listing listing-indented'>
     {% for article in site.data.writings.tutorials %}
       <li class='u-margin-bottom-small'>
@@ -19,7 +19,7 @@ title: Sam Selikoff - Writings
     {% endfor %}
   </ul>
 
-  <h2>Book notes</h2>
+  <h2 class='listing-heading'>Book notes</h2>
   <ul class='listing listing-indented'>
     {% for article in site.data.writings.book_reviews %}
       <li class='u-margin-bottom-small'>
@@ -28,7 +28,7 @@ title: Sam Selikoff - Writings
     {% endfor %}
   </ul>
 
-  <h2>Economics</h2>
+  <h2 class='listing-heading'>Economics</h2>
   <ul class='listing listing-indented'>
     {% for article in site.data.writings.economics %}
       <li class='u-margin-bottom-small'>
