--- a/work/index.html
+++ b/work/index.html
@@ -11,36 +11,12 @@ title: Sam Selikoff - Work
     <h1>Code + Design</h1>
   </div>
 
-  <ul>
+  <ul class='listing listing-indented'>
     {% for project in sorted_projects %}
       <li class='u-margin-bottom-small'>
         <a class='link-white' href="{{ project.url }}">{{ project.title }}</a>
       </li>
     {% endfor %}
   </ul>
-
-  <!-- <div class='box box-lg'>
-    <div class='box-body'>
-      <ul class='listing'>
-        {% for project in sorted_projects %}
-          <li class='box-list-item'>
-            <a href="{{ project.url }}">{{ project.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div> -->
-
-  <!-- <div class='box box-sm'>
-    <div class="box-body">
-      <ul class='listing'>
-        {% for project in sorted_projects %}
-          <li class='listing-item'>
-            <a class='link-primary' href="{{project.project_url}}">{{project.title}}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div> -->
 
 </div>
