--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@ title: Sam Selikoff
 </header>
 
 <div class="content content-home">
-  <div class="content-secondary-wrapper visible-lg">
-    <aside class='content-secondary' role='complementary'>
-      {% include logo.html %}
-    </aside>
-  </div>
+  {% include sidebar.html %}
 
   <div class="content-main-wrapper">
     <section class='content-main' role="main">
