Cleaning up layouts

--- a/work/index.html
+++ b/work/index.html
@@ -1,6 +1,7 @@
 ---
 layout: inverted
 title: Sam Selikoff - Work
+site-section: work
 ---
 
 {% assign sorted_projects = (site.projects | sort: 'date' | reverse) %}
