home vs content layout

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ title: Sam Selikoff
   {% include logo.html %}
 </header>
 
-<div class="content content-home">
-  {% include sidebar.html %}
+<div class="content content-home home">
+  {% include sidebar_home.html %}
 
-  <div class="content-main-wrapper">
-    <section class='content-main' role="main">
+  <div class="home-main-wrapper">
+    <section class='home-main' role="main">
       <div class='inverted'>
         <div class='home-section container'>
     
