Use projects instead of work

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,12 +1,12 @@
 ---
 layout: inverted
-title: Sam Selikoff - Work
-site-section: work
+title: Sam Selikoff - Projects
+site-section: projects
 ---
 
 {% assign sorted_projects = (site.projects | sort: 'date' | reverse) %}
 
-<div id="work">
+<div id="projects">
 
   <div class="title">
     <h1>Code + Design</h1>
