--- a/resume/index.html
+++ b/resume/index.html
@@ -1,14 +1,13 @@
 ---
-layout: default
+layout: no_comments
 title: Resume - Sam Selikoff
 id: resume
 ---
 
 <header>
-  <p class="location">Brighton, MA</p> 
 
   <div class="links">
-    <p>
+    <p class='pull-right'>
       <a href="mailto:samselikoff@gmail.com" target="_blank">sam.selikoff@gmail.com</a>
       <span class="sep"> | </span>
       <a href="http://www.twitter.com/samselikoff" target="_blank">@samselikoff</a>
@@ -16,9 +15,10 @@ id: resume
       <a href="http://www.github.com/samselikoff">Github</a>
     </p>
 
-    <p><small><a href="resume.pdf">PDF</a> <a href="resume.docx">DOC</a></small></p>
+    <!-- <p><small><a href="resume.pdf">PDF</a> <a href="resume.docx">DOC</a></small></p> -->
   </div>
 
+  <p class="location">Burlington, VT</p> 
 
 </header>
 
