--- a/writings/d3-backbone-angular-ember/1_original.html
+++ b/writings/d3-backbone-angular-ember/1_original.html
@@ -3,6 +3,7 @@ title: "Using D3 with Backbone, Angular and Ember"
 category: tutorial
 redirect_from:
   - /writing/d3-backbone-angular-ember/index.html
+  - /tutorials/d3-backbone-angular-ember/1_original.html
 ---
 
 <!DOCTYPE html>
