--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,6 @@ title: Sam Selikoff - About
 
   <hr>
   
-  <p>Besides programming, I enjoy reading, playing guitar, photography, and spending time with friends and family. I currently live in Burlington and occasionally get to see my wife Jenna, who's in medical school. We also have a Yorkie named Zoe. She's all attitude.</p>
-  <p><img src="/images/about1.jpg" alt=""></p>
-  <p><img src="/images/about2.jpg" alt=""></p>
+  <p>Besides programming, I enjoy reading, playing guitar, photography, and spending time with friends and family. I currently live in Brooklyn, NY.</p>
+  <p><img src="/images/about.jpg" alt=""></p>
 </div>
